--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ body{
 main{
     display: flex;
     flex-direction: column;
+    align-items: center;
     
     justify-content: center;
     
@@ -54,6 +55,7 @@ hr{
     margin-top: 26px;
 
 }
+/* blogs style*/
 .blogs{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -83,3 +85,85 @@ hr{
   color: rgba(0, 0, 255, 0.696);
   margin-left: 5px;
 }
+/*-----------------
+courses style
+-------------------*/
+.courses{
+    display: flex;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+.course{
+    box-shadow: #f3f1ff30;
+
+}
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+    justify-content: space-between;
+
+
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
+}
+.fa-star.filled{
+    color: #ffc014; 
+    font-size: 12px;
+}
+.fa-star.emty{
+    color:grey;
+    font-size: 12px; 
+}
+.fa-clock{
+    background-color:whitesmoke;
+   
+
+}
+.course-duration{
+    display: flex;
+    background-color:lightyellow;
+    color:darkgreen;
+    width: 100px;
+    border-radius: 2px;
+    justify-content: space-between;
+}
+
+/*----------------
+Media queries
+------------------
+mobile device*/
+@media only screen and (max-width:688px){
+    .conatainer{
+        width: 100%;
+    }
+    .players ,.blogs,.courses{
+        background-color: lightgreen;
+        grid-template-columns:repeat(1 ,1fr) ;
+    }
+    .player,.blog{
+        flex-direction: column;
+    }
+         .courses{
+            display: none;
+        }
+    }
+    /*tablet devises*/
+   @media only screen and(min-width:688px) and( max-width:992px){
+    .conatainer{
+        width: 100%;
+    }
+        .players ,.courses{
+            grid-template-columns: repeat(2,1fr);
+        }
+        
+    }
+    
+
+
+
+
+
